tests/baselines/reference/generatorTypeCheck32.errors.txt
generatorTypeCheck32.ts(2,29): error TS1163: A 'yield' expression is only allowed in a generator body.


==== generatorTypeCheck32.ts (1 errors) ====
    var s: string;
    var f: () => number = () => yield s;
                                ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.